objects/Client__c.object
<CustomObject>
    <description>here is client object to store detailed information about client</description>
    <fields>
        <fullName>Client_code__c</fullName>
        <description>here is client code.. which is auto generated</description>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Client code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>here we enter Description for the field</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>here is email id of client</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>here is mobile no. of client</description>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <description>here is contact address for that client</description>
        <label>Point of Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>